@@ -163,8 +163,8 @@ Features
 - Added the ``pyramid.testing.testConfig`` context manager, which can be used
   to generate a configurator in a test, e.g. ``with testing.testConfig(...):``.
 
-- Users can now invoke a subrequest from within view code using the
-  ``request.subrequest`` API.
+- Users can now invoke a subrequest from within view code using a new
+  ``request.invoke_subrequest`` API.
 
 Deprecations
 ------------
@@ -252,6 +252,12 @@ Backwards Incompatibilities
   * ``registerSettings``, use 
     ``pyramid.config.Configurator.add_settings`` instead.
 
+- In Pyramid 1.3 and previous, the ``__call__`` method of a Response object
+  was invoked before any finished callbacks were executed.  As of this
+  release, the ``__call__`` method of a Response object is invoked *after*
+  finished callbacks are executed.  This is in support of the
+  ``request.invoke_subrequest`` feature.
+
 Documentation
 -------------
 
@@ -261,7 +267,7 @@ Documentation
   while running a server.
 
 - Added a "Invoking a Subrequest" chapter to the documentation.  It describes
-  how to use the new ``request.subrequest`` API.
+  how to use the new ``request.invoke_subrequest`` API.
 
 Dependencies
 ------------
